tests/sksl/errors/UseWithoutInitializeArrayIndex.glsl
### Compilation failed:

error: 1: 'i' has not been assigned
1 error
